zellij/src/tests/integration/snapshots/mosaic__tests__integration__resize_down__cannot_resize_down_when_pane_below_is_at_minimum_height-6.snap
---
source: src/tests/integration/resize_down.rs
expression: snapshot
---
Bye from Mosaic!█                                                                                                        
                                                                                                                         
                                                                                                                         
                                                                                                                         
                                                                                                                         
